syntax = "proto3";

option csharp_namespace = "Packet";

enum MSGID {
    MSGBOX = 0;
    MOVEDATA = 1;
    JOINROOM = 2;
    JOINROOMREQ = 3;
    JOINROOMRES = 4;
    ROOMCREATED = 5;
    ROOMREMOVED = 6;
    CREATEROOMREQ = 7;
    CREATEROOMRES = 8;
    ROOMLISTREQ = 9;
    ROOMLISTRES = 10;
    QUITROOM = 11;
    PLAYGAMEREQ = 12;
    PLAYGAMERES = 13;
    SCENEREADY = 14;
    CONFIRMLOAD = 15;
}

message MsgBox {
    string context = 1;
}

message MoveData {
    string id = 1;
    float speed = 2;
    Position dir = 3;
    Position pos = 4;
    float yRotation = 5;
}

message Position {
    float x = 1;
    float y = 2;
    float z = 3;
}

message CreateRoomReq {
    string roomName = 1;
    int32 maxUser = 2;
}

message CreateRoomRes {
    bool success = 1;
    Room room = 2;
}

message JoinRoom {
    string id = 1;
    int32 userCount = 2;
}

message JoinRoomReq {
    string roomName = 1;
}

message JoinRoomRes {
    bool success = 1;
    Room room = 2;
    repeated string userList = 3;
}

message RoomListReq {}

message RoomListRes {
    repeated Room list = 1;
}

message QuitRoom {
    string id = 1;
}

message RoomRemoved {
    string roomName = 1;
    bool isYourRoom = 2;
}

message Room {
    string name = 1;
    int32 userCount = 2;
    int32 maxCount = 3;
}

message PlayGameReq {
    int32 playTime = 1;
    int32 targetHp = 2;
}

message PlayGameRes {
    bool success = 1;
    PlayerType type = 2;
}

message SceneReady {}

message ConfirmLoad {}

enum PlayerType {
    NONE = 0;
    TARGET = 1;
    CHASER = 2;
}